tests/correct/correto07.lua



function foo()
    local x = 1
    if x == 1 then
        goto label
    end
    ::label::
end

foo()